--- a/BoM-and-MCE-Generator-Reloaded.csproj
+++ b/BoM-and-MCE-Generator-Reloaded.csproj
@@ -14,6 +14,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Forms and Panels\MainPanels\MainPanel_Account.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
